--- a/src/index.css
+++ b/src/index.css
@@ -285,6 +285,17 @@ a {
   border-top: none;
 }
 
+.explore-button-title {
+  font-family: 'BreeSerif-Regular';
+  font-size: 20px;
+  margin-top: 0px;
+  padding: 0.5%;
+  text-align: center;
+  background-color: var(--cardEdge);
+  border: solid 3px var(--cardEdge);
+  border-top: none;
+}
+
 /* Pokemon card */
 
 .card {
@@ -325,7 +336,7 @@ a {
   padding: 1%;
 }
 
-.card-large:hover, .card-small:hover, .image-overlay-container:hover {
+.card-large:hover, .card-small:hover, .image-overlay-container:hover, .explore-image-container:hover {
   box-shadow: 0 8px 16px 8px rgb(255, 231, 143);
 }
 
@@ -448,6 +459,13 @@ button {
   width: 100%;
 }
 
+.explore-horizontal-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
 .second-horizontal-container {
   flex: 0.3;
   display: flex;
@@ -470,6 +488,11 @@ button {
 .image-overlay-container {
   position: relative;
   margin: 3%;
+  margin-bottom: 0px;
+}
+
+.explore-image-container {
+  margin: 1%;
   margin-bottom: 0px;
 }
 
